# stateless-kafka-broker

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  RADME.md  README.md  docker-compose.yml
.github/workflows/: build-and-push.yml  build-and-release.yml  test-redis-metastore.yml  test-tikv-metastore.yml  test.yml
config/: cluster.sample.json
src/: lib.rs  main.rs
src/common/: cluster.rs  config.rs  consumer.rs  index.rs  mod.rs  record.rs  response.rs  topic_partition.rs  utils.rs
src/handler/: api_versions.rs  consumer_group_heartbeat.rs  context.rs  create_topics.rs  delete_topics.rs  fetch.rs  find_coordinator.rs  heartbeat.rs  init_producer_id.rs  join_group.rs  leave_group.rs  metadata.rs  mod.rs  offset_commit.rs  offset_fetch.rs  produce.rs  sync_group.rs
src/rest/: cluster.rs  consumer_groups.rs  mod.rs  topics.rs  tp_index.rs
src/server/: cluster_heartbeat.rs  dispatch.rs  loader.rs  mod.rs  rest_server.rs  server.rs  transport.rs
src/storage/: file_log_store.rs  index_store_impl.rs  log_store_impl.rs  meta_store_impl.rs  mod.rs
src/storage/file/: file_log_store.rs  file_meta_store.rs
src/storage/redis/: redis_client.rs  redis_index_store.rs  redis_meta_store.rs
src/storage/s3/: s3_client.rs  s3_log_store.rs  s3_meta_store.rs
src/storage/tikv/: tikv_index_store.rs  tikv_meta_store.rs
src/traits/: index_store.rs  log_store.rs  meta_store.rs  mod.rs
tests/: kafka_client.rs  metadata_request.rs  offset_commit_test.rs
