[package]
name = "serverless_kafka_broker"
version = "0.1.0"
edition = "2024"


[dependencies]
kafka-protocol = { version = "0.15.1", default-features = false, features = ["client", "broker", "gzip", "snappy", "messages_enums"] }
anyhow = "1.0"
bytes = { version = "1.10.1", features = ["serde"] }
byteorder = "1"
uuid = { version = "1.8", features = ["serde", "v4"] }

log = "0.4"
env_logger = "0.11.8"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11" 
bincode = "2.0.1"
config = "0.15.11"
dotenv = "0.15"

base64 = "0.22.1"
fs2 = "0.4"
indexmap = "2.9.0"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["clock"] }

aws-config = "1"
aws-sdk-s3 = "1.94.0"

redis = { version = "0.32.2", features = ["tokio-comp"] }
trait-variant = "0.1"
async-trait = "0.1"

[dev-dependencies]
rdkafka = { version = "0.37.0", features = ["tokio"] }
