[package]
name = "stateless_kafka_broker"
version = "0.1.0"
edition = "2024"


[dependencies]
kafka-protocol = { version = "0.15.1", default-features = false, features = ["client", "broker", "gzip", "snappy", "messages_enums"] }
anyhow = "1.0.100"
bytes = { version = "1.10.1", features = ["serde"] }
byteorder = "1"
uuid = { version = "1.18.1", features = ["serde", "v4"] }

log = "0.4.28"
env_logger = "0.11.8"

serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
serde_bytes = "0.11.19" 
bincode = "2.0.1"
config = "0.15.16"
dotenv = "0.15"

base64 = "0.22.1"
fs2 = "0.4"
indexmap = "2.11.4"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4.42", features = ["clock"] }

aws-config = "1.8.6"
aws-sdk-s3 = "1.106.0"

fred = "10.1.0"
trait-variant = "0.1"
async-trait = "0.1"
mockall = "0.13.1"
tokio-stream = "0.1.17"
futures = "0.3.31"
rand = "0.9.2"
nix = { version = "0.30.1", features = ["socket"] }

tikv-client = "0.3"

axum = { version = "0.8.4", features = ["macros", "json"] }
thiserror = "2.0.16"
tracing = "0.1"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
hyper = "1.7.0"

[dev-dependencies]
mockall = "0.13.1"
rdkafka = { version = "0.38", features = ["tokio"] }
tokio = { version = "1", features = ["full"] }
